tests/errors/no-instance/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0113]: No instance of trait `numeric` for type `string`.
  │
2 │  n + n
  │  ^^^^^
  ╰─𜱶 tests/errors/no-instance/main.pa:2:2
